# manage-gmail

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PRUNE_LOG.example.md  PRUNE_PLAYBOOK.md  README.md  SETUP.md  TODO.md  audit_log.example.jsonl  contacts_emails.example.txt  noisy_senders.example.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: keep_rules.local.example.tsv  prune_industry_senders.local.example.conf
docs/: model_evaluation.md
python/: classify_corpus.py  classify_live.py  mbox_import.py  metadata.yaml  pyproject.toml  sanitize.py
python/prompts/: v1.0.0.yaml  v1.1.0.yaml  v1.2.0.yaml  v1.3.0.yaml  v1.4.0.yaml  v1.5.0.yaml  v1.6.0.yaml  v1.7.0.yaml
python/tests/: test_classify_corpus.py  test_classify_live.py  test_mbox_import.py  test_sanitize.py
scripts/: export_contacts.sh  find_noisy_senders.sh  label_reference.sh  lib.sh  prune.sh  rescue.sh  review_audit.sh
